chore: add brand-a package

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+# IDE and Code editors
 .idea
+.vscode
+
 node_modules/
+
+/.yarn/*
+!/.yarn/releases
+!/.yarn/plugins
+!/.yarn/sdks
+
+# Swap the comments on the following lines if you don't wish to use zero-installs
+# Documentation here: https://yarnpkg.com/features/zero-installs
+!/.yarn/cache
+#/.pnp.*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
