--- a/apps/my-cra-app/package.json
+++ b/apps/my-cra-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mediamonks/eslint-config-react": "^1.0.0",
     "@mediamonks/react-scripts": "4.0.1-mm.3",
+    "@mediamonks/brand-a": "^0.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
