--- a/packages/brand-a/package.json
+++ b/packages/brand-a/package.json
@@ -1,17 +1,16 @@
 {
   "name": "@mediamonks/brand-a",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "description": "Brand-a package",
-  "module": "lib/index.es.js",
-  "typings": "lib/index.d.ts",
-  "browserslist": [
-    "defaults",
-    "node 8",
-    "last 4 versions"
-  ],
   "author": "Ardak Tileu",
   "license": "ISC",
+  "sideEffects": false,
+  "module": "lib/index.es.js",
+  "typings": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
     "@azimutlabs/rollup-config": "*",
     "@azimutlabs/rollup-config-babel": "*",
@@ -28,11 +27,12 @@
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.13.17",
+    "react": "^17.0.2",
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.13.17"
   }
 }
