--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "yarn rollup -cw"
   },
   "devDependencies": {
+    "@azimutlabs/eslint-config": "^0.9.0",
     "@azimutlabs/rollup": "*",
     "lerna": "^4.0.0",
     "rollup": "^2.45.2"
