--- a/package.json
+++ b/package.json
@@ -9,9 +9,31 @@
     "compile": "yarn rollup -c",
     "start": "yarn rollup -cw"
   },
+  "eslintConfig": {
+    "extends": [
+      "@azimutlabs"
+    ]
+  },
+  "eslintIgnore": [
+    "**/node_modules",
+    "**/lib",
+    "**/build"
+  ],
   "devDependencies": {
     "@azimutlabs/eslint-config": "^0.9.0",
     "@azimutlabs/rollup": "*",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-functional": "^3.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-jest": "^24.3.6",
     "lerna": "^4.0.0",
     "rollup": "^2.45.2"
   }
