--- a/packages/brand-a/package.json
+++ b/packages/brand-a/package.json
@@ -11,6 +11,10 @@
   "files": [
     "lib"
   ],
+  "scripts": {
+    "test": "scripty",
+    "lint": "scripty"
+  },
   "devDependencies": {
     "@azimutlabs/rollup-config": "*",
     "@azimutlabs/rollup-config-babel": "*",
@@ -24,15 +28,21 @@
     "babel-plugin-macros": "^3.0.1",
     "react": "^17.0.2",
     "rollup": "^2.45.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@mediamonks/scripts": "^0.0.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.3.0"
+    "@emotion/styled": "^11.3.0",
+    "react": "^17.0.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.17"
+  },
+  "scripty": {
+    "modules": [
+      "@mediamonks/scripts/packages"
+    ]
   }
 }
