--- a/package.json
+++ b/package.json
@@ -24,26 +24,50 @@
   "devDependencies": {
     "@azimutlabs/eslint-config": "^0.9.0",
     "@azimutlabs/rollup": "*",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/config-lerna-scopes": "^12.1.1",
+    "@mediamonks/scripts": "^0.0.0",
     "babel-eslint": "^10.1.0",
+    "commitlint": "^12.1.1",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-jest": "^24.3.6",
+    "husky": "^6.0.0",
     "lerna": "^4.0.0",
+    "lerna-changelog": "^1.0.1",
+    "lint-staged": "^11.0.0",
     "rollup": "^2.45.2",
-    "scripty": "^2.0.0",
-    "@mediamonks/scripts": "^0.0.0"
+    "scripty": "^2.0.0"
   },
   "scripty": {
     "modules": [
       "@mediamonks/scripts/workspace"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "**/*/.{tsx, ts}": "eslint --no-ignore --cache --max-warnings 0"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional",
+      "@commitlint/config-lerna-scopes"
+    ]
+  },
+  "engines": {
+    "node": ">= 10 <=14"
   }
 }
