--- a/packages/brand-a/package.json
+++ b/packages/brand-a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mediamonks/brand-a",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": false,
   "description": "Brand-a package",
   "author": "Ardak Tileu",
@@ -24,12 +24,12 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@mediamonks/scripts": "^0.1.0",
     "@types/react": "^17.0.4",
     "babel-plugin-macros": "^3.0.1",
     "react": "^17.0.2",
     "rollup": "^2.45.2",
-    "typescript": "^4.2.4",
-    "@mediamonks/scripts": "^0.0.0"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "@emotion/core": "^11.0.0",
