--- a/packages/brand-a/package.json
+++ b/packages/brand-a/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "description": "Brand-a package",
   "author": "Ardak Tileu",
-  "license": "ISC",
+  "license": "MIT",
   "sideEffects": false,
   "module": "lib/index.es.js",
   "typings": "lib/index.d.ts",
@@ -44,5 +44,6 @@
     "modules": [
       "@mediamonks/scripts/packages"
     ]
-  }
+  },
+  "gitHead": "80ce81b415698044e7e3ac9c9c20c61c65cd226a"
 }
