--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -17,5 +17,6 @@
   },
   "bugs": {
     "url": "https://github.com/ardakkk/monorepo-mediamonks/issues"
-  }
+  },
+  "gitHead": "80ce81b415698044e7e3ac9c9c20c61c65cd226a"
 }
