--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -27,5 +27,6 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^6.2.9"
-  }
+  },
+  "gitHead": "80ce81b415698044e7e3ac9c9c20c61c65cd226a"
 }
