--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@mediamonks/config",
   "version": "0.1.1",
+  "private": false,
   "description": "Sharable development typescript configuration",
   "author": "ardak <ardak.tileu@mediamonks.com>",
   "homepage": "https://github.com/ardakkk/monorepo-mediamonks#readme",
