--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -22,7 +22,9 @@
     "@storybook/addons": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "normalize.css": "^8.0.1",
+    "bootstrap-4-grid": "^3.4.0",
     "react": "^17.0.2",
     "webpack": "^5.36.1"
   },
