feat(brand-a): add components

--- a/packages/brand-a/.babelrc
+++ b/packages/brand-a/.babelrc
@@ -12,6 +12,15 @@
   ],
   "plugins": [
     "macros",
-    "@babel/transform-runtime"
+    "@babel/transform-runtime",
+    [
+      "module-resolver", {
+        "root": ["./src"],
+        "alias": {
+          "core": "./core",
+          "components": "./components"
+        }
+      }
+    ]
   ]
 }
