--- a/packages/brand-a/package.json
+++ b/packages/brand-a/package.json
@@ -12,8 +12,11 @@
     "lib"
   ],
   "scripts": {
+    "watch": "scripty",
     "test": "scripty",
-    "lint": "scripty"
+    "lint": "scripty",
+    "compile": "scripty",
+    "clean": "scripty"
   },
   "devDependencies": {
     "@azimutlabs/rollup-config": "*",
@@ -24,21 +27,25 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@mediamonks/scripts": "^0.1.1",
+    "@emotion/babel-plugin": "^11.3.0",
+    "@mediamonks/scripts": "^1.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "@types/react": "^17.0.4",
     "babel-plugin-macros": "^3.0.1",
-    "react": "^17.0.2",
     "rollup": "^2.45.2",
     "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.1.5",
+    "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "bootstrap-4-grid": "^3.4.0",
+    "normalize.css": "^8.0.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.17"
+    "@babel/runtime": "^7.13.17",
+    "@mediamonks/common": "^0.0.0"
   },
   "scripty": {
     "modules": [
