--- a/apps/my-cra-app/package.json
+++ b/apps/my-cra-app/package.json
@@ -1,14 +1,16 @@
 {
   "name": "my-cra-app",
-  "version": "0.2.1",
-  "private": false,
+  "version": "1.0.0",
   "files": [
     "src",
     "public"
   ],
   "license": "MIT",
   "dependencies": {
-    "@mediamonks/brand-a": "^0.1.1",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@mediamonks/brand-a": "^1.0.0",
     "@mediamonks/eslint-config-react": "^1.0.0",
     "@mediamonks/react-scripts": "4.0.1-mm.3",
     "@testing-library/jest-dom": "^5.11.6",
@@ -21,6 +23,8 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "npm-run-all": "^4.1.5",
+    "bootstrap-4-grid": "^3.4.0",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
