--- a/apps/my-next-app/package.json
+++ b/apps/my-next-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-next-app",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -8,18 +8,18 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "bootstrap-4-grid": "^3.4.0",
-    "normalize.css": "^8.0.1"
+    "next": "latest",
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@mediamonks/brand-b": "^0.1.0",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "typescript": "4.0",
-    "@mediamonks/brand-b": "^0.0.0"
+    "typescript": "4.0"
   },
   "license": "MIT"
 }
