--- a/packages/brand-b/package.json
+++ b/packages/brand-b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mediamonks/brand-b",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": false,
   "description": "Brand-b package",
   "author": "Ardak Tileu",
@@ -28,10 +28,10 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@emotion/babel-plugin": "^11.3.0",
-    "@mediamonks/scripts": "^1.1.0",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "@mediamonks/scripts": "^1.2.0",
     "@types/react": "^17.0.4",
     "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "rollup": "^2.45.2",
     "typescript": "^4.2.4"
   },
@@ -39,13 +39,13 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "react": "^17.0.2",
     "bootstrap-4-grid": "^3.4.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.17",
-    "@mediamonks/common": "^0.0.0"
+    "@mediamonks/common": "^0.1.0"
   },
   "scripty": {
     "modules": [
