--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -17,5 +17,6 @@
   },
   "bugs": {
     "url": "https://github.com/ardakkk/monorepo-mediamonks/issues"
-  }
+  },
+  "gitHead": "02892230d1c42c0746cfe9dc3fd0ad0f88fca092"
 }
