--- a/apps/my-next-app/package.json
+++ b/apps/my-next-app/package.json
@@ -21,5 +21,6 @@
     "@types/react-dom": "^17.0.1",
     "typescript": "4.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "02892230d1c42c0746cfe9dc3fd0ad0f88fca092"
 }
