--- a/packages/brand-a/.babelrc
+++ b/packages/brand-a/.babelrc
@@ -12,15 +12,6 @@
   ],
   "plugins": [
     "macros",
-    "@babel/transform-runtime",
-    [
-      "module-resolver", {
-        "root": ["./src"],
-        "alias": {
-          "core": "./core",
-          "components": "./components"
-        }
-      }
-    ]
+    "@babel/transform-runtime"
   ]
 }
